--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Duoc Uc</ion-list-header>
-          <ion-note>Capitanfalkon@gmail.com</ion-note>
+          <ion-list-header>Hola</ion-list-header>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
@@ -12,18 +11,16 @@
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
-        </ion-list>
-        <ion-item (click)="abrirMapa()">
-          <ion-icon slot="start" ios="map" md="map"></ion-icon>
-          <ion-label>Mapa</ion-label>
-        </ion-item>
-        
-        <ion-item (click)="cerrarSesion()">
-          <ion-icon slot="start" ios="exit" md="exit"></ion-icon>
-          <ion-label>Cerrar Sesión</ion-label>
-        </ion-item>
+          <ion-item (click)="compartirApp()">
+              <ion-icon slot="start" ios="share-social" md="share-social"></ion-icon>
+              <ion-label>Compartir</ion-label>
+          </ion-item>
 
-        
+       
+
+        </ion-list>
+
+      
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
