--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,3 @@
-:root {
-  --ion-color-primary: #FFB800;
-}
-
 ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
 }
@@ -78,42 +74,46 @@ ion-menu.ios ion-list {
 }
 
 ion-menu.ios ion-note {
-  line-height:24px;
-margin-bottom:20px;
+  line-height: 24px;
+  margin-bottom: 20px;
 }
-  
-ion-menu.ios ion-item{
---padding-start :16px ;
---padding-end :16px ;
---min-height :50px ;
-}
-  
-ion-menu.ios ion-item.selected ion-icon{
-color :var(--ion-color-primary) ;
-}
-  
-ion-menu.ios ion-item ion-icon{
-font-size :24px ;
-color :#73849a ;
-}
-  
-ion-menu.ios ion-list#labels-list ion-list-header{
-margin-bottom :8px ;
-}
-  
-ion-menu.ios ion-list-header,
-ion-menu.ios ion-note{
-padding-left :16px ;
-padding-right :16px ;
-}
-  
-ion-menu.ios ion-note{
-margin-bottom :8px ;
-}
-  
-ion-note{
-display:inline-block ;
-font-size :16px ;
 
-color :var(--ion-color-medium-shade) ;
+ion-menu.ios ion-item {
+  --padding-start: 16px;
+  --padding-end: 16px;
+  --min-height: 50px;
+}
+
+ion-menu.ios ion-item.selected ion-icon {
+  color: var(--ion-color-primary);
+}
+
+ion-menu.ios ion-item ion-icon {
+  font-size: 24px;
+  color: #73849a;
+}
+
+ion-menu.ios ion-list#labels-list ion-list-header {
+  margin-bottom: 8px;
+}
+
+ion-menu.ios ion-list-header,
+ion-menu.ios ion-note {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+ion-menu.ios ion-note {
+  margin-bottom: 8px;
+}
+
+ion-note {
+  display: inline-block;
+  font-size: 16px;
+
+  color: var(--ion-color-medium-shade);
+}
+
+ion-item.selected {
+  --color: var(--ion-color-primary);
 }
