--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,60 +1,87 @@
-ion-toolbar {
-  background-color: var(--ion-color-mycolor);
+.bg-img {
+    /* The image used */
+    background-image: url("https://www.rutaschile.com/configurador/Parques/Fauna_23112015084110.jpg");
+  
+    min-height: 380px;
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  
+    /* Needed to position the navbar */
+    position: relative;
+  }
+  
+  /* Position the navbar container inside the image */
+  .container {
+    position: absolute;
+    margin: 20px;
+    width: auto;
+  }
+  
+  /* The navbar */
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  .footer {
+    height: 100px;
+    background-color: blue;
+  }
+  /* Navbar links */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  .animated-header {
+    animation-name: slideInRight;
+    animation-duration: 1s;
+    animation-timing-function: ease;
+    animation-fill-mode: both;
+  }
+  
+  @keyframes slideInRight {
+    0% {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  .animacion {
+    animation: bounce 2s ;
+  }
+  
+  @keyframes bounce {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+  }
+  .animated-image {
+    animation: fadeIn 2s ease-in;
+    padding: 3%;
 }
 
-.titulo {
-  text-align: center;
-}
-
-
-.card-container {
-  max-width: 80%;
-  margin: 0 auto;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.header-title-large {
-  font-size: 32px;
-}
-
-.content-container {
-  background-color: #f5f5f5;
-  padding: 16px;
-}
-
-.content-center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 16px;
-}
-
-.welcome-message {
-  font-size: 24px;
-  color: #333;
-  margin-top: 8px;
-}
-
-.company-logo-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.company-logo {
-  max-width: 100%;
-  height: auto;
-  margin-top: 16px;
-  border-radius: 10px; /* Agrega el border-radius para hacer las esquinas redondeadas */
-}
-
-.attendance-button {
-  margin-top: 24px;
-  background-color: #007bff;
-  color: #fff;
-}
-
-.map-container {
-  margin-top: 32px;
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
