--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,8 +1,7 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <ion-back-button icon="arrow-back" defaultHref="/" text=""></ion-back-button>
     </ion-buttons>
     <ion-title>Registro</ion-title>
   </ion-toolbar>
@@ -38,4 +37,3 @@
       </form>
     </ion-card-content>
   </ion-card>
-</ion-content>
